Overflow visible added to menu images to fix DT-2221

--- a/css/widgets-menu.less
+++ b/css/widgets-menu.less
@@ -372,3 +372,7 @@
 
 }
 
+.widget.menu .menu-items > * {
+	overflow: visible;
+}
+
